--- a/Reno.MVC/Views/User/Login.cshtml
+++ b/Reno.MVC/Views/User/Login.cshtml
@@ -2,6 +2,7 @@
 
 @{
     Layout = null;
+    ViewBag.Title = "Login";
 }
 
 <!DOCTYPE html>
@@ -10,11 +11,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="DANIELS">
-    <title>RenoCare - Login page</title>
+    <title>RenoCare | @ViewBag.Title</title>
     <link rel="shortcut icon" href="~/imgs/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/css/style.css">
+    <link rel="stylesheet" href="~/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/css/Login.css">
 </head>
 <body class="overflow-hidden">
     <section class="gray-bg login-page">
