--- a/Reno.MVC/Views/Shared/_Layout.cshtml
+++ b/Reno.MVC/Views/Shared/_Layout.cshtml
@@ -13,13 +13,13 @@
     <link href="~/css/style.css" rel="stylesheet" />
     <link href="~/fonts/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
-    
-    @*
-    
-    
-    <link href="~/css/plugins/select2/select2.min.css" rel="stylesheet" />
-    <link href="~/css/plugins/dataTables/datatables.min.css" rel="stylesheet" />
-    <!--Add Style for Checkbox and radio (ICheck plugin) -->
+
+
+	<link href="~/lib/datatables/css/datatables.bootstrap4.css" rel="stylesheet" />
+
+    @*<link href="~/css/plugins/select2/select2.min.css" rel="stylesheet" />
+    <link href="~/css/plugins/dataTables/datatables.min.css" rel="stylesheet" />*@
+    @*<!--Add Style for Checkbox and radio (ICheck plugin) -->
     <link href="~/css/plugins/iCheck/custom.css" rel="stylesheet" />
     <!--Add Style Foe Date  (DatePicker plugin)-->
     <link href="~/css/plugins/datapicker/datepicker3.css" rel="stylesheet" />
@@ -116,9 +116,10 @@
     @*<script src="~/js/plugins/pace/pace.min.js"></script>*@
     <script src="~/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
     <script src="~/js/app/inspinia.js"></script>
+
     @*<script src="~/js/plugins/select2/select2.full.min.js"></script>
-    <script src="~/js/plugins/dataTables/datatables.min.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/js/plugins/dataTables/datatables.min.js"></script>*@
+    @*<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
     <script src="~/js/plugins/iCheck/icheck.min.js"></script>
     <script src="~/js/plugins/datapicker/bootstrap-datepicker.js"></script>
@@ -195,7 +196,7 @@
                 }
             });
         }
-    </script>
-    @RenderSection("Scripts", required: false)*@
+    </script>*@
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
