Add Medication Requests List end point with its statuses and types

--- a/Reno.MVC/Views/Patients/Index.cshtml
+++ b/Reno.MVC/Views/Patients/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@using Reno.MVC.Services.Base;
-@inject IClient _client;
-
-@{
+﻿@{
     ViewData["Title"] = "Patient List";
 }
 
@@ -59,7 +56,7 @@
                                         <div class="col-md-6">
 											<label class="control-label col-md-12">Diabetes Types</label>
                                             <div class="col-md-12">
-                                                <select multiple asp-items="ViewBag.DiabetesSelectList" 
+                                                <select multiple class="multiple-select" asp-items="ViewBag.DiabetesSelectList" 
                                                     placeholder="Select Diabetes Types..." data-search="false">
                                                 </select>
                                             </div>
@@ -70,7 +67,7 @@
                                         <div class="col-md-6">
                                             <label class="control-label col-md-12">Hypertension Types</label>
                                             <div class="col-md-12">
-                                                <select multiple asp-items="ViewBag.HypertensionSelectList"
+                                                <select multiple class="multiple-select" asp-items="ViewBag.HypertensionSelectList"
                                                         placeholder="Select Hypertension Types..." data-search="false">
                                                 </select>
                                             </div>
@@ -78,7 +75,7 @@
                                         <div class="col-md-6">
                                             <label class="control-label col-md-12">Smoking Status</label>
                                             <div class="col-md-12">
-                                                <select multiple asp-items="ViewBag.SmokingSelectList"
+                                                <select multiple class="multiple-select" asp-items="ViewBag.SmokingSelectList"
                                                         placeholder="Select Smoking Status..." data-search="false">
                                                 </select>
                                             </div>
@@ -163,47 +160,4 @@
 	<script src="~/lib/datatables/js/jquery.datatables.min.js"></script>
 	<script src="~/lib/datatables/js/datatables.bootstrap4.min.js"></script>
     <script src="~/js/Pages/PatientsIndex.js"></script>
-
-    <script>
-        VirtualSelect.init({
-            ele: 'select',
-            dropboxWrapper: 'self',
-            optionsCount: 5,
-            
-            // Text to show near select all checkbox when search is disabled
-            selectAllText: 'Select all',
-            // Text to use when displaying no.of values selected text (i.e. 3 options selected)
-            optionsSelectedText: 'options selected',
-            // Text to use when displaying all values selected text (i.e. All (10))
-            allOptionsSelectedText: 'All',
-
-
-            // Show each selected values as tags with remove icon
-            showValueAsTags: true,
-            // Maximum no.of values to show in the tooltip for multi-select
-            noOfDisplayValues: 3,
-
-
-            // Custom width
-            dropboxWidth: "100%",
-
-            // Scroll selected option to viewport on dropbox open
-            focusSelectedOptionOnOpen: true,
-            
-            // show dropbox as popup on small screen like mobile
-            showDropboxAsPopup: true,
-            // maximum screen width that allowed to show dropbox as popup
-            popupDropboxBreakpoint: '576px',
-            // left, center, or right
-            popupPosition: 'center',
-
-
-            // hide value tooltip if all options selected
-            hideValueTooltipOnSelectAll: true,
-
-            // Maximum width
-            maxWidth: '100%'
-
-        });
-    </script>
 }
